# protobuf-over-nanomsg-example

./: LICENSE  README.md
.github/workflows/: main.yml
C++/: .gitignore  CMakeLists.txt  README.md  main.cpp
C++/cmake/: 3rd_party.cmake
C++/platform/nanomsg/lib/cmake/nanomsg-1.1.5/: nanomsg-config-version.cmake  nanomsg-target-noconfig.cmake  nanomsg-target.cmake
C++/platform/nanomsg/lib/pkgconfig/: nanomsg.pc
C++/platform/protobuf/x64/lib/: libprotobuf-lite.la  libprotobuf.la  libprotoc.la
C++/platform/protobuf/x64/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
C++/proto/: CMakeLists.txt  message.proto
js/: README.md  client.js  message_pb.js  package-lock.json  package.json
